--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: python
 python:
   - "3.5"
+install:
+  - pip install coveralls
 script: 
-  - make
+  - coverage run -m unittest
+after_success:
+  - coveralls
